data/derived/sp14/progs/unify/prog0663.ml.out
Characters 62-76:
  "[" ^ (List.map g l) "]";;
        ^^^^^^^^^^^^^^
Error: This expression has type ('a -> string) list
       This is not a function; it cannot be applied.
